syntax = "proto3";

package company.v1;

import "company_response.proto";

option go_package = "common/pkg/service/company.v1";

message CompanyLoginRequest {
  string username = 1;
  string password = 2;
}

message CompanyRegisterRequest {
  string username = 1;
  string password = 2;
}

message CompanyLoginResponse {
  CompanyResponse response = 1;
}

message CompanyRegisterResponse {
  CompanyResponse response = 1;
  string data = 2;
}

service CompanyLoginService {
  rpc Login (CompanyLoginRequest) returns (CompanyLoginResponse) {}
  rpc Register (CompanyRegisterRequest) returns (CompanyRegisterResponse) {}
}